<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:id="@+id/image_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/background_gradient"
            android:scaleType="centerCrop"
    />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="#7A474747"
            android:id="@+id/imageView"
    />

    <TextView
            android:id="@+id/title_login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:fontFamily="@font/abril_fatface"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cardViewEditEmail"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/transparent"
            app:cardBackgroundColor="@color/transparent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardViewEditPassword"
            app:layout_constraintVertical_chainStyle="packed">

        <eightbitlab.com.blurview.BlurView
                android:id="@+id/blurViewEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:blurOverlayColor="@color/gray">

            <EditText
                    android:id="@+id/add_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textColorLogin"
                    android:drawableTint="@color/textColorLogin"
                    android:drawablePadding="15dp"
                    android:fontFamily="@font/acme"
                    android:inputType="textEmailAddress"
            />

        </eightbitlab.com.blurview.BlurView>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:id="@+id/cardViewEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/transparent"
            app:cardBackgroundColor="@color/transparent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewEditEmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed">
        <eightbitlab.com.blurview.BlurView
                android:id="@+id/blurViewEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:blurOverlayColor="#63303030">
            <EditText
                    android:id="@+id/add_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_https_black_24dp"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/textColorLogin"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textColorLogin"
                    android:fontFamily="@font/acme"/>
        </eightbitlab.com.blurview.BlurView>
    </androidx.cardview.widget.CardView>
    <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/login"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            app:layout_constraintTop_toBottomOf="@+id/cardViewEditPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="--- OR ---"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login"/>
    <androidx.cardview.widget.CardView
            android:id="@+id/cardViewButtonGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_or"
    >
        <eightbitlab.com.blurview.BlurView
                android:id="@+id/blurViewGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#19335795">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/google"
                        android:tint="@android:color/white"
                        android:layout_margin="8dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textColor="@android:color/white"
                />
            </LinearLayout>
            
        </eightbitlab.com.blurview.BlurView>

    </androidx.cardview.widget.CardView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/CREATE_ACCOUNT"
            android:padding="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd ="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewButtonGoogle"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/FORGOT_PASSWORD"
            android:padding="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd ="30dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewButtonGoogle"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>